plugins {
    id 'java'
}

group 'org.example'
version project.version_name

repositories {
    mavenCentral()
}

configurations {
    create("shadow")
    implementation.extendsFrom(shadow)
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'

    shadow 'io.netty:netty-all:4.1.94.Final'
    shadow 'io.netty:netty-transport-native-epoll:4.1.94.Final'
    shadow 'com.alibaba.fastjson2:fastjson2:2.0.22'

    shadow 'org.slf4j:slf4j-api:2.0.6'
    shadow 'org.apache.logging.log4j:log4j-slf4j2-impl:2.19.0'
    shadow 'org.apache.logging.log4j:log4j-api:2.19.0'
    shadow 'org.apache.logging.log4j:log4j-core:2.19.0'
    shadow 'commons-codec:commons-codec:1.15'
    shadow 'commons-logging:commons-logging:1.2'
    shadow 'commons-io:commons-io:2.11.0'
    //    shadow 'it.unimi.dsi:fastutil:8.5.11'
    shadow 'com.google.guava:guava:32.1.2-jre'
    shadow 'com.github.oshi:oshi-core:6.4.1'
    shadow 'io.github.pcmind:leveldb:1.2'
    shadow 'com.squareup.okhttp3:okhttp:5.0.0-alpha.11'

    shadow 'bot.inker.acj:runtime:1.3'

    shadow 'org.jetbrains:annotations:23.1.0'

    shadow 'org.reflections:reflections:0.10.2'

    shadow 'org.java-websocket:Java-WebSocket:1.5.4'

    shadow 'org.bouncycastle:bcprov-jdk18on:1.76'

    shadow 'org.lz4:lz4-java:1.8.0'
}

//tasks.withType(JavaCompile).configureEach {
//    options.compilerArgs += ['--enable-preview']
//}

java {
    withSourcesJar()
}

// Exclude the secret private key.
// Do not remove this if you need a security anonymous handshake.
sourceSets {
    main {
        java {
            exclude "src/main/resources/secret/kalmiagram/main/SECRET_PRIVATE"
        }
    }
}

jar {
    from("LICENSE") {

    }

    with copySpec({
        from(configurations.shadow.collect {
            it.isDirectory() ? it : zipTree(it)
        })

        duplicatesStrategy(DuplicatesStrategy.EXCLUDE)

        exclude "META-INF/BC2048KE.SF"
    })

    manifest {
        attributes(
                'Main-Class': project.main_class,
                'Multi-Release': 'true',
        )
    }
}

test {
    useJUnitPlatform()
}

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17
